discussion/kv_engine/184673/184673_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: Add CDC Magma API to MagmaMemoryTrackingProxy

Change-Id: I78aa375b41a9f1d6920bd208e97d3f7cc70dde41

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-09 16:47:42.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-09 16:48:10.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/331450/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-09 17:10:34.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/763/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2870:18: error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
    case Status::RangeNotFound:
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:37:9: error: unknown type name "Mode" [clang-diagnostic-error]
        Mode mode) {
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:39:17: error: no member named "Initialize" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return itr->Initialize(startSeqno, endSeqno, mode);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:460:12: error: no member named "SetHistoryRetentionSize" in "magma::Magma" [clang-diagnostic-error]
    magma->SetHistoryRetentionSize(historyBytes);
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:466:12: error: no member named "SetHistoryRetentionTime" in "magma::Magma" [clang-diagnostic-error]
    magma->SetHistoryRetentionTime(historySeconds);
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:537:19: error: no member named "GetOldestHistorySeqno" in "magma::Magma" [clang-diagnostic-error]
    return magma->GetOldestHistorySeqno(kvid);
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:543:19: error: no member named "GetOldestHistorySeqno" in "magma::Magma" [clang-diagnostic-error]
    return magma->GetOldestHistorySeqno(snapshot);
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30: error: unknown type name "Mode" [clang-diagnostic-error]
                             Mode mode) override;
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/763/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2870:18:
error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/763/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/941/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-memory-tracking-proxy.h(53): error C2061: syntax error: identifier "Mode" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/941/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/735/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/735/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/775/ : FAILURE

Compile error at [2023-01-09T17:10:00.461Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: ?Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/775/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/776/ : FAILURE

Compile error at [2023-01-09T16:51:57.371Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/776/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/769/ : FAILURE

Compile error at [2023-01-09T16:53:10.109Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: ?Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/769/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/783/ : FAILURE

Compile error at [2023-01-09T17:04:36.289Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/783/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/756/ : FAILURE

Compile error at [2023-01-09T17:04:36.782Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/756/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1049/ : FAILURE

Compile error at [2023-01-09T16:54:42.483Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1049/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22040/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/785/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2023-01-16 15:12:18.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
